[project]
name = "crypto_data_fetcher"
version = "0.0.18"
description = "crypto_data_fetcher"
authors = [
    { name = "richmanbtc", email = "" }
]
dependencies = [
    "ccxt>=4.2.43",
    "pandas>=2.0.3",
    "six>=1.16.0",
    "joblib>=1.3.2",
    "ipykernel>=6.29.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "CC0" }

[project.scripts]
hello = "crypto_data_fetcher:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_data_fetcher"]
