[metadata]
name = crypto_data_fetcher
version = 0.202402.1
author = imataka7
description = fork of richmanbtc/crypto_data_fetcher
long_description = file:README.md
long_description_content_type=text/markdown
url = https://github.com/imataka7/crypto_data_fetcher
license = CC0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages =
    crypto_data_fetcher

[options.packages.find]
exclude =
    tests
    notes
